--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Homa Alemzadeh - Homepage</title>
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" type="text/css" href="css/style.css" title="style1">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans">
 </head>
 
