--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Homa Alemzadeh - Homepage</title>
-<link rel="stylesheet" type="text/css" href="css/style.css" title="style1">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans">
+<link rel="stylesheet" type="text/css" href="style.css" title="style1">
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
 </head>
+
 
 <body>
 <div id="all" class="clearfix">
@@ -27,13 +28,12 @@
         <br> <br> <br> <br> <br>
         <h4>
           <br>
-          <a href="./Homa_Alemzadeh_CV.pdf" target="_blank">CV</a> | 
+          <!--<a href="./Homa_Alemzadeh_CV.pdf" target="_blank">CV</a> | -->
           <a href="https://scholar.google.com/citations?user=sXpmLxUAAAAJ&hl=en" target="_blank"> Google Scholar</a> | 
-          <!--<a href="https://www.researchgate.net/profile/Farzad_Farnoud" target="_blank"> ResearchGate</a> |-->
+          <!--<a href="https://www.researchgate.net/profile/Homa_Alemzadeh" target="_blank"> ResearchGate</a> |-->
           <a href="https://github.com/homa-alem" target="_blank"> GitHub</a> | 
           <a href="https://www.linkedin.com/in/homaalemzadeh" target="_blank"> LinkedIn</a> |
           <a href="https://twitter.com/homalm" target="_blank"> Twitter</a><br>
-          <!--<a href="./Homa_Alemzadeh_RS">Research Statement</a> | <a href="./Homa_Alemzadeh_TS">Teaching Statement</a>.<br>-->
           </h4>
         </td>
         </tr>
@@ -64,7 +64,7 @@
 	</div>
 	<div id="rightColumn2">
 		A <b>postdoctoral research position</b> available in the Link Lab in the area of Medical Cyber-Physical Systems. 
-		Apply <a href="https://uva.wd1.myworkdayjobs.com/en-US/UVAJobs/job/Charlottesville-VA/Research-Associate-in-Electrical-and-Computer-Engineering_R0008615">here</a>. 
+		Apply <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Research-Associate-in-Electrical-and-Computer-Engineering-and-Computer-Science_R0009889">here</a>. 
 		<br><br>
 		
 		New papers on <a href="https://arxiv.org/pdf/1807.06172.pdf">Resilience Assessment of Autonomous Driving Agents</a> and 
