--- a/students.html
+++ b/students.html
@@ -37,7 +37,7 @@
 			<li>Kay Hutchinson</li>
 			<li>Zongyu (Zoey) Li</li>
 			<li>Taylor Patrick</li>
-			<li>Xugui Zhou</a></li>	
+			<li>Xugui Zhou</li>	
 			</ul>
 			<br>
 			</td>
