Adding missing papers

--- a/pub.html
+++ b/pub.html
@@ -128,7 +128,7 @@
 		    
 		    <tr valign="top">
 			<td>
-			   <a href="./papers/ISMR2019.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			   <a href="https://arxiv.org/pdf/1901.09802.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
 			   <!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
 				-->
 			</td>
@@ -398,9 +398,7 @@
 			<i>SIGBED Review, vol. 12, no. 4, Special Issue on Medical Cyber Physical Systems Workshop</i>, 2015.<br>
 		    <div class="style13" style="padding:3px; width:500px; border:1px solid black;">
 			<b><i><font color=#EB6C2C>“Illinois researchers making virtual surgery simulation a reality”,</font><br>
-			       <a href="https://www.ece.illinois.edu/newsroom/article/11894"> ECE Illinois News</a>, 
-			    <a href="http://engineering.illinois.edu/news/article/11877"> Engineering at Illinois News</a>, 
-			    <a href="http://www.csl.illinois.edu/news/csl-researchers-making-virtual-surgery-simulation-realityOct"> CSL News</a>,
+			    <a href="http://engineering.illinois.edu/news/article/11877"> Engineering at Illinois News</a>,
 			    Oct. 8, 2015.</i><br>
 			</div>
 			</p>
@@ -409,7 +407,7 @@
 
 			<tr valign="top">
 			<td><a href="./papers/ACS_Abstract.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			    <a href="./slides/ACS_Poster.pdf"><img src="./images/poster.png" alt="[PPT]" width="21" height="21" border="1" align="top">
+			    <a href="./slides/ACS_Poster.pdf"><img src="./images/icons/poster.png" alt="[PPT]" width="21" height="21" border="1" align="top">
 			</td>
 			<td>
 			<p align="left">
@@ -422,7 +420,7 @@
 
 			<tr valign="top">
 			<td><a href="./papers/CBMS_14.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			    <a href="./slides/CBMS_Poster.pdf"><img src="./images/poster.png" alt="[PPT]" width="21" height="21" border="1" align="top">
+			    <a href="./slides/CBMS_Poster.pdf"><img src="./images/icons/poster.png" alt="[PPT]" width="21" height="21" border="1" align="top">
 			</td>
 			<td>
 			<p align="left">
@@ -513,7 +511,8 @@
 		<tbody>
 			<tr valign="top">
 			<td><a href="./papers/WORCS_2012.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-				<a href="./slides/DSN_WORCS_2012.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+				<!--<a href="./slides/DSN_WORCS_2012.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+				-->
 			</td>
 			<td>
 			<p align="left" class="style13">
@@ -538,7 +537,7 @@
 			<i>Proc. of 33rd Annual International IEEE EMBS Conference (EMBC’11)</i>, Sep. 2011.
 			<div class="style13" style="padding:3px; width:630px; border:1px solid black;">
 			<b>&nbsp;<font color=#EB6C2C>Featured by the Media Center of the ECE department, UIUC,</font><br>
-			“<a href="http://www.ece.illinois.edu/mediacenter/article.asp?id=2586">Monitoring devices help to detect signs of impending medical crisis</a>”, Aug. 5, 2013.</b>
+			“<a href="https://csl.illinois.edu/news/monitoring-devices-help-detect-signs-impending-medical-crisis-0">Monitoring devices help to detect signs of impending medical crisis</a>”, Aug. 5, 2013.</b>
 			</div>
 			</p>
 			</td>
@@ -566,7 +565,7 @@
 			M. U. Saleheen, <u>H. Alemzadeh</u>, A. M. Cheriyan, Z. T. Kalbarczyk, R. K. Iyer<br>
 			<i>Proc. of the 3rd International Conference on BioMedical Engineering and Informatics (BMEI'10)</i>, 2010.<br>
 		    <div class="style13" style="padding:3px; width:550px; border:1px solid black;">
-			<b>&nbsp;<font color=#EB6C2C>Featured in the <i>Biomedical Computation Review</i>, </font><br>“<a href="http://biomedicalcomputationreview.org/uploads/BCR%20Fall%202012.pdf">Smart Embedded Devices: Here They Come</a>”, vol. 8, no. 3 (2012), pp. 4-6,
+			<b>&nbsp;<font color=#EB6C2C>Featured in the <i>Biomedical Computation Review</i>, </font><br>“<a href="http://www.bcr.org/content/smart-embedded-devices-here-they-come">Smart Embedded Devices: Here They Come</a>”, vol. 8, no. 3 (2012), pp. 4-6,
 			<br> &nbsp;Simbios: NIH Center for Biomedical Computation at Stanford University.</b>
 			</div>
 			</p>
