Fixed 6501_syllabus.pdf filename

--- a/teaching/ece_6501/syllabus.html
+++ b/teaching/ece_6501/syllabus.html
@@ -24,7 +24,7 @@
 	</p>
 	<p align="left" style="font-size:16px">
 	Please review the syllabus carefully and make yourself familiar with the course objectives, pre-requisites, expectations, and grading policies. <br><br>
-	<iframe width = 1050px height = 1000px src="./ece6501_syllabus.pdf"></iframe>
+	<iframe width = 1050px height = 1000px src="6501_syllabus.pdf"></iframe>
     </p>
 	</td>
 	</tr>
