Updating news and ECE6501 index

--- a/research.html
+++ b/research.html
@@ -23,9 +23,9 @@
 		<tbody>
 			<tr valign="top">
 			<td cellpadding="0"><font size="3.5" color=#000000><a href="./students.html">Dependable Systems and Analytics Group (UVA-DSA)</a></font><br>
-			Our group is currently working on the following research projects funded by the U.S. National Science Foundation (NSF), the National Institue of Standards and Technology (NIST), UVA Health System, and UVA Engineering (SEAS). 
-			We are looking for self-motivated students with interests and expertise in dependable computing and fault-tolerance, systems security, cyber-physical systems, and data analytics to join our group.
-			<br><br><br>
+			Our group is currently working on the following research projects funded by the U.S. National Science Foundation (NSF), the National Institue of Standards and Technology (NIST), UVA Health System, UVA Engineering (SEAS), and the Commonwealth Cyber Initiative (CCI). 
+			We are looking for motivated students with interests and expertise in dependable computing and fault-tolerance, systems security, cyber-physical systems, and data analytics to join our group.
+			<br><br>
 			</td>
 			</tr>
 			<tr valign="top">
@@ -117,8 +117,9 @@
 			 <b><font size="3" color=#000000>Sponsors:</font>
 			 <td><img src="./images/logos/NSF_logo.png" width="100" height="auto" ></td>
 			 <td><img src="./images/logos/NIST_logo.png" width="300" height="auto" align="top"></td>
-			 <td><img src="./images/logos/SEAS_logo.png" width="150" height="auto"></td>
 			 <td><img src="./images/logos/UVAHealth_logo.png" width="150" height="auto"></td>
+			 <td><img src="./images/logos/SEAS_logo.png" width="150" height="auto"></td>
+			 <td><img src="./images/logos/CCI_logo.png" width="180" height="auto"></td>
 			 </tr>
 			 </tbody>
 			 </table>
