--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -33,28 +33,27 @@
 	   Real-time Embedded Systems<br></b>
 	</p>
 	<p align="center" style="font-size:12px">
-		<img src="./embedded.png" alt="[PNG]" width="60%" height="auto%" border="0" align="middle"><br>
+		<img src="./embedded.png" alt="[PNG]" width="50%" height="auto%" border="0" align="middle"><br>
 		<a href="http://slideplayer.com/slide/3298762/">Source</a>
 	</p>	
 	<p align="left" style="font-size:15px">
-		Embedded computing systems are special-purpose computers (e.g., micro-controllers, DSP
-		processors) at the core of Cyber-Physical Systems (CPS) that are tightly integrated with the 
-		electronic and physical components and must operate within real-time performance, battery, 
-		and size constraints. They monitor and control the physical processes, through feedback loops 
-		where physical processes affect computations and vice versa. More than 90% of manufactured 
-		micro-processors go inside airplanes, automobiles, medical devices, digital cameras, toys, home
+		Embedded systems are special-purpose computers at the core of Cyber-Physical Systems (CPS) that monitor and control the physical processes through real-time interactions with sensors and actuators.
+		More than 90% of manufactured micro-processors go inside airplanes, automobiles, medical devices, digital cameras, toys, home
 		appliances, and smart buildings. What are the building blocks of an embedded system? 
-		How can we design an embedded system and make sure our system satisfies specific functionality, 
+		How can we design an embedded system and make sure it satisfies specific functionality, 
 		reliability, and timing requirements? How can we bridge the gap between the inherently 
-		sequential embedded software with the intrinsic concurrency in the physical world?
-		
-		<br><br>This course will help you answer these questions by providing the foundational knowledge and 
+		sequential embedded software with the intrinsic concurrency in the physical world? 
+		How can we execute multiple data acquisition, processing, and control tasks on resource-constrained microcontrollers while satisfying real-time constraints? 
+		<br><br>
+		This course will help you answer these questions by providing the foundational knowledge and 
 		hands-on experience in design and validation of embedded computing systems, with a focus on
-		embedded C programming and real-time operating systems for ARM® Cortex™-M
+		embedded C programming and real-time operating systems (RTOS) for ARM® Cortex™-M
 		Microcontrollers. 
 		
-	</p>
-	<p style="font-size:15px">
+		In the second half of the class, we will explore related topics and applications
+		in safety and security, cyber-physical systems (CPS), internet of things (IoT), and robotics through
+		paper presentations and discussions.
+	<br><br>
 	<b>Topics:</b>
 		<ul>
 			<li>Embedded system architectures</li>
@@ -79,12 +78,8 @@
 			    </ul>
 			<li>Quantitative analysis and validation</li>
 		</ul>
-		In the second half of the class, we will explore related topics and applications
-		in safety and security, cyber-physical systems (CPS), internet of things (IoT), and robotics through
-		paper presentations and discussions.
 		<br>
 	</p>
-	<br>
 	<!-- <table border="0" cellpadding="0" cellspacing="0">
 		<tbody>
 		<tr><td><strong>Time: </strong></td><td>&ensp;Mon/Wed 5:00 - 6:15 PM</td></tr>
@@ -94,7 +89,6 @@
 		<tr><td><strong>Teaching Assistants:</strong></td><td>&ensp; Mustafa Hotaki</td><td>&ensp; mkh3cf@virginia.edu </td></tr>
 		</tbody>
 	</table>-->
-
 	</td>
 	</tr>
 	</table>
@@ -104,8 +98,8 @@
 	</div>
 	<div id="rightColumn2">
 	    <!-- <strong><a href="./ece6501_syllabus.pdf" target="_blank">Full Syllabus</a><br>-->
-		<a href="TBD" target="_blank">UVA Collab Site</a><br>
-		<a href="https://piazza.com/virginia/spring2020/ece45016501cs6501/home" target="_blank">Piazza</a><br>
+		<a href="https://collab.its.virginia.edu/portal/site/cefc51f1-c513-40c8-af6f-061948426791" target="_blank">UVA Collab Site</a><br>
+		<a href="https://piazza.com/virginia/fall2020/ece45016501/home" target="_blank">Piazza</a><br>
 		<a href="https://github.com/UVA-embedded-systems" target="_blank">GitHub Classroom</a><br><br>
 		<a href="http://www.virginia.edu/registrar/calendar.html" target="_blank">UVA Academic Calendar</a></strong><br>
 	</div>
