--- a/students.html
+++ b/students.html
@@ -42,7 +42,7 @@
 			<br>
 			</td>
 		</tr>
-		
+	
 		<!--<tr>
 			<td colspan=2><b><font size="3" color=#000000>M.Sc. Students</font></td>
 		</tr>    
@@ -72,7 +72,9 @@
 		<tr valign="top">
 			<td colspan=2><b><font size="3" color=#000000><br>Former Students</font></b></td>
 		</tr>
-						
+		<tr valign="top">
+			<td colspan=2><b>Graduate Students:</b></td>
+		</tr>			
 		<tr>
 			<td></td>
 			<td>
@@ -100,6 +102,9 @@
 			<li>Ailec Wu -&ensp;First Position: PhD @ Caltech&ensp;</li>
 			<li>Annie Chapman&ensp;</li>
 			<li>Terry Tsai&ensp;</li>
+			<li>JoonHyung Park&ensp;</li>
+			<li>Hojun Jeong&ensp;</li>
+			<li>Haonan (Neal) Chen</li>
 			<li>Elli Veer&ensp;</li>
 			<li>Robert Pierce&ensp;</li>
 			</ul>
