--- a/research.html
+++ b/research.html
@@ -116,7 +116,7 @@
 			 <br>
 			 <b><font size="3" color=#000000>Sponsors:</font>
 			 <td><img src="./images/logos/NSF_logo.png" width="100" height="auto" ></td>
-			 <td><img src="./images/logos/NIST_logo.png" width="300" height="auto" align="top"></td>
+			 <td><img src="./images/logos/NIST_Logo.png" width="300" height="auto" align="top"></td>
 			 <td><img src="./images/logos/UVAHealth_logo.png" width="150" height="auto"></td>
 			 <td><img src="./images/logos/SEAS_logo.png" width="150" height="auto"></td>
 			 <td><img src="./images/logos/CCI_logo.png" width="180" height="auto"></td>
