--- a/students.html
+++ b/students.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Homa Alemzadeh - Homepage</title>
 <link rel="stylesheet" type="text/css" href="style.css" title="style1">
+<link rel="icon" type="image/ico" href="images/favico.ico">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
 </head>
 
