--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -4,7 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>ECE/CS 4434/6434 - Spring 2018</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans">
+<link rel="icon" type="image/ico" href="images/favico.ico">
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div id="all" class="clearfix">
