--- a/teaching/ece_6501/schedule.html
+++ b/teaching/ece_6501/schedule.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>ECE 4501/6501, CS 6501 - Fall 2020</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="icon" type="image/ico" href="images/favico.ico">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
 </head>
 <body>
