Added DSML link

--- a/news.html
+++ b/news.html
@@ -27,9 +27,9 @@
 			<td>03/2020</td>
 			<td width="5"></td>
 			<td>
-			Our paper on <a href="./papers/DSN_2020.pdf"> Real-Time Context-aware Detection of Unsafe Events in Robot-Assisted Surgery </a> was accepted to the<a href="https://dsn2020.webs.upv.es" target="_blank"> 50th IEEE/IFIP Int. Conf. on Dependable Systems and Networks (DSN 2020)</a> (Acceptance rate: 16.5%). 
-			<br><br>
 			My PhD student, Kay Hutchinson, was awarded the prestigious 2020 <a href="https://nsfgrfp.org" target="_blank"> NSF Graduate Research Fellowship (GRF)</a>. Congratulations!
+			<br><br>
+			Our paper on <a href="./papers/DSN_2020.pdf"> Real-Time Context-aware Detection of Unsafe Events in Robot-Assisted Surgery </a> was accepted to the<a href="https://dsn2020.webs.upv.es" target="_blank"> 50th IEEE/IFIP Int. Conf. on Dependable Systems and Networks (DSN 2020)</a> (Acceptance rate: 16.5%). 
 			</td>	
 			</tr>
 			
@@ -49,6 +49,7 @@
 			<td width="5"></td>
 			<td>
 			I am co-organizing the third workshop on <a href="https://dependablesecureml.github.io" target="_blank">Dependable and Secure Machine Learning (DSML)</a> at the DSN 2020.
+			Check out the program with the keynote and paper presentation videos <a href="https://dependablesecureml.github.io/program.html" target="_blank"> here</a>.
 			<br>
 			</td>	
 			</tr>
