--- a/news.html
+++ b/news.html
@@ -24,6 +24,15 @@
 		<tbody>									
 			<tr valign="top"><td colspan="2"></td></tr>
 			<tr valign="top">
+			<td>07/2020</td>
+			<td width="5"></td>
+			<td>
+			I was invited to join the <a href="http://www.dependability.org/wg10.4/#" target="_blank"> IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance.</a> 
+			</td>	
+			</tr>
+			
+			<tr valign="top"><td colspan="2"></td></tr>
+			<tr valign="top">
 			<td>03/2020</td>
 			<td width="5"></td>
 			<td>
