--- a/news.html
+++ b/news.html
@@ -27,6 +27,8 @@
 			<td>07/2020</td>
 			<td width="5"></td>
 			<td>
+			I am serving on the program committee of <a href="http://iccps.acm.org/2021/" target="_blank">ICCPS 2021</a>. Looking forward to your contributions!
+			<br><br>
 			I was invited to join the <a href="http://www.dependability.org/wg10.4/#" target="_blank"> IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance.</a> 
 			</td>	
 			</tr>
