Add info about online classes

--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -23,6 +23,10 @@
 	   <b><br> ECE 4501/6501, CS 6501 - Fall 2020 <br>
 	   Real-time Embedded Systems<br></b>
 	</p>
+	<p align="left" style="font-size:15px;color:red">
+		Due to the current COVID-19 pandemic, all the course activities will be carried out online via Zoom. <br>
+		For the latest updates, please visit <a style="font-size:15px;color:red" href="https://www.virginia.edu/coronavirus">UVA's Return to Grounds page</a>
+	</p>
 	<p align="center" style="font-size:12px">
 		<img src="./embedded.png" alt="[PNG]" width="50%" height="auto%" border="0" align="middle"><br>
 		<a href="http://slideplayer.com/slide/3298762/">Source</a>
@@ -96,7 +100,7 @@
 	</div>
 	<div id="rightbottomColumn">
 	<strong>Time: </strong>Tue/Thr 11:00 - 12:15 PM<br>
-	<strong>Location: </strong>Thornton Hall E304<br>
+	<strong>Location: </strong>Online through Zoom<br>
 	<strong>Lab Location: </strong>Rice 240 (Open 24/7)<br><br>
     <strong>Instructor: </strong><br>
     Homa Alemzadeh, ha4d@virginia.edu<br>
@@ -105,8 +109,6 @@
 	<strong>Teaching Assistants:</strong> <br> 
 	TBD, TA@virginia.edu<br>
 	TBD, TA@virginia.edu<br>  
-    TBD, TA@virginia.edu<br>
-    TBD, TA@virginia.edu<br>
     TBD, TA@virginia.edu<br>
     TBD, TA@virginia.edu<br>
 	<br>
