--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -24,7 +24,8 @@
 	   Real-time Embedded Systems<br></b>
 	</p>
 	<p align="left" style="font-size:15px;color:red">
-		Due to the current COVID-19 pandemic, all the course activities will be carried out online via Zoom. <br>
+		Due to the current COVID-19 pandemic, all the course activities will be carried out online. 
+ 		<br>
 		For the latest updates, please visit <a style="font-size:15px;color:red" href="https://www.virginia.edu/coronavirus">UVA's Return to Grounds page</a>
 	</p>
 	<p align="center" style="font-size:12px">
@@ -100,19 +101,19 @@
 	</div>
 	<div id="rightbottomColumn">
 	<strong>Time: </strong>Tue/Thr 11:00 - 12:15 PM<br>
-	<strong>Location: </strong>Online through Zoom<br>
-	<strong>Lab Location: </strong>Rice 240 (Open 24/7)<br><br>
+	<strong>Location: </strong>Online via Zoom<br><br>
+	<!--<strong>Lab Location: </strong>Rice 240 (Open 24/7)<br><br>-->
     <strong>Instructor: </strong><br>
     Homa Alemzadeh, ha4d@virginia.edu<br>
-    Office: 259 Olsson Hall (Link Lab)<br>
-    <b>Office Hours:</b> TBD<br><br>
+    <!--Office: 259 Olsson Hall (Link Lab)<br>-->
+    <b>Virtual Office Hours:</b> TBD via Zoom<br><br>
 	<strong>Teaching Assistants:</strong> <br> 
 	TBD, TA@virginia.edu<br>
 	TBD, TA@virginia.edu<br>  
     TBD, TA@virginia.edu<br>
     TBD, TA@virginia.edu<br>
 	<br>
-    <strong>TA Office Hours: </strong> (Rice 240)<br>
+    <strong>Virtual TA Office Hours: </strong> via Zoom<br>
     <table border="0" cellpadding="0" cellspacing="0">
 	<tbody>
 	<tr><td>Monday&ensp;</td><td>TBD&ensp;</td><td>TBD</td></tr>
