--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -108,10 +108,11 @@
     <!--Office: 259 Olsson Hall (Link Lab)<br>-->
     <b>Virtual Office Hours:</b> TBD via Zoom<br><br>
 	<strong>Teaching Assistants:</strong> <br> 
-	TBD, TA@virginia.edu<br>
-	TBD, TA@virginia.edu<br>  
-    TBD, TA@virginia.edu<br>
-    TBD, TA@virginia.edu<br>
+	Adam El Sheikh<br>
+    Gunter Abbot<br>
+	Nicholas Moon<br>  
+    Quin Helfrick<br>
+    Tahmid Kazi<br>
 	<br>
     <strong>Virtual TA Office Hours: </strong> via Zoom<br>
     <table border="0" cellpadding="0" cellspacing="0">
