--- a/teaching/ece_6501/schedule.html
+++ b/teaching/ece_6501/schedule.html
@@ -24,7 +24,7 @@
 	   <b><br> ECE 4501/6501, CS 6501 - Fall 2020 Schedule<br></b>
 	</p>
     <p align="left" style="font-size:16px">
-    The following is a sample schedule from Fall 2018 with the tentative activities for each week and throughout the semester. 
+    The following schedule lists the tentative activities for each week and throughout the semester. 
     This schedule is <b><u>subject to change</b></u>. You will be informed of any updates or changes here and on the Collab website and at the beginning of each class. <br></p>
     <p align="right" style="font-size:14px"><b>(Reading: &ensp; V = Valvano and L&S = Lee and Seshia)</b><br></p>
     <p>
