--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -26,7 +26,7 @@
 	<p align="left" style="font-size:15px;color:red">
 		Due to the current COVID-19 pandemic, all the course activities will be carried out online. 
  		<br>
-		For the latest updates, please visit <a style="font-size:15px;color:red" href="https://www.virginia.edu/coronavirus">UVA's Return to Grounds page</a>
+		For the latest updates, please visit <a style="font-size:15px;color:red" href="https://www.virginia.edu/coronavirus">UVA's Return to Grounds page</a>.
 	</p>
 	<p align="center" style="font-size:12px">
 		<img src="./embedded.png" alt="[PNG]" width="50%" height="auto%" border="0" align="middle"><br>
