Adding office hours

--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -106,10 +106,11 @@
     <strong>Instructor: </strong><br>
     Homa Alemzadeh, ha4d@virginia.edu<br>
     <!--Office: 259 Olsson Hall (Link Lab)<br>-->
-    <b>Virtual Office Hours:</b> TBD via Zoom<br><br>
+    <b>Virtual Office Hours:</b> via Zoom<br>
+    <tr><td>Tuesdays&ensp;</td><td>2-3pm&ensp;</td></tr><br><br>
 	<strong>Teaching Assistants:</strong> <br> 
 	Adam El Sheikh<br>
-    Gunter Abbot<br>
+    Gunther Abbot<br>
 	Nicholas Moon<br>  
     Quin Helfrick<br>
     Tahmid Kazi<br>
@@ -117,10 +118,11 @@
     <strong>Virtual TA Office Hours: </strong> via Zoom<br>
     <table border="0" cellpadding="0" cellspacing="0">
 	<tbody>
-	<tr><td>Monday&ensp;</td><td>TBD&ensp;</td><td>TBD</td></tr>
-	<tr><td>Tuesday&ensp;</td><td>TBD&ensp;</td><td>TBD</td></tr>
-	<tr><td>Wednesday&ensp;</td><td>TBD&ensp;</td><td>TBD</td></tr>
-	<tr><td>Thursday&ensp;</td><td>TBD&ensp;</td><td>TBD</td></tr>
+	<tr><td>Mondays&ensp;</td><td>1-2pm&ensp;</td><td>Quin Helfrick&nbsp;</td></tr>
+	<tr><td>Tuesdays&ensp;</td><td>4-6pm&ensp;</td><td>Nicholas Moon</td></tr>
+	<tr><td>Wednesdays&ensp;</td><td>4-6pm&ensp;</td><td>Gunther Abbot</td></tr>
+	<tr><td>Thursdays&ensp;</td><td>4-6pm&ensp;</td><td>Adam El Sheikh</td></tr>
+	<tr><td>Fridays&ensp;</td><td>4-6pm&ensp;</td><td>Tahmid Kazi</td></tr>
 	</tbody>
 	</table>
 	<br>
