Edit office hours

--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -104,10 +104,11 @@
 	<strong>Location: </strong>Online via Zoom<br><br>
 	<!--<strong>Lab Location: </strong>Rice 240 (Open 24/7)<br><br>-->
     <strong>Instructor: </strong><br>
-    Homa Alemzadeh, ha4d@virginia.edu<br>
+    Homa Alemzadeh, ha4d@virginia.edu<br><br>
     <!--Office: 259 Olsson Hall (Link Lab)<br>-->
-    <b>Virtual Office Hours:</b> via Zoom<br>
-    <tr><td>Tuesdays&ensp;</td><td>2-3pm&ensp;</td></tr><br><br>
+    <b>Virtual Instructor Office Hours:</b><br>
+	Tuesdays&ensp;2-3pm via Zoom&ensp;<br><br>
+	
 	<strong>Teaching Assistants:</strong> <br> 
 	Adam El Sheikh<br>
     Gunther Abbot<br>
