Update TA office hours

--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -119,11 +119,11 @@
     <strong>Virtual TA Office Hours: </strong> via Zoom<br>
     <table border="0" cellpadding="0" cellspacing="0">
 	<tbody>
-	<tr><td>Mondays&ensp;</td><td>1-3pm&ensp;</td><td>Quin Helfrick&nbsp;</td></tr>
-	<tr><td>Tuesdays&ensp;</td><td>4-6pm&ensp;</td><td>Nicholas Moon</td></tr>
-	<tr><td>Wednesdays&ensp;</td><td>4-6pm&ensp;</td><td>Gunther Abbot</td></tr>
-	<tr><td>Thursdays&ensp;</td><td>4-6pm&ensp;</td><td>Adam El Sheikh</td></tr>
-	<tr><td>Fridays&ensp;</td><td>4-6pm&ensp;</td><td>Tahmid Kazi</td></tr>
+	<tr><td>Mondays&ensp;</td><td>1-3pm&ensp;</td><tr><!--<td>Quin Helfrick&nbsp;</td></tr>-->
+	<tr><td>Tuesdays&ensp;</td><td>4-6pm&ensp;</td><tr><!--<td>Nicholas Moon</td></tr>-->
+	<tr><td>Wednesdays&ensp;</td><td>4-6pm&ensp;</td><tr><!--<td>Gunther Abbot</td></tr>-->
+	<tr><td>Thursdays&ensp;</td><td>4-6pm&ensp;</td><tr><!--<td>Adam El Sheikh</td></tr>-->
+	<tr><td>Fridays&ensp;</td><td>4-6pm&ensp;</td><tr><!--<td>Tahmid Kazi</td></tr>-->
 	</tbody>
 	</table>
 	<br>
