Update students, papers, news

--- a/news.html
+++ b/news.html
@@ -35,6 +35,15 @@
 			
 			<tr valign="top"><td colspan="2"></td></tr>
 			<tr valign="top">
+			<td>05/2020</td>
+			<td width="5"></td>
+			<td>
+			My MSc student, Mustafa Hotaki, defended his thesis and will be joining Counterpoint Consulting. Congratulations! 
+			</td>	
+			</tr>
+			
+			<tr valign="top"><td colspan="2"></td></tr>
+			<tr valign="top">
 			<td>03/2020</td>
 			<td width="5"></td>
 			<td>
