--- a/pub.html
+++ b/pub.html
@@ -24,6 +24,21 @@
 		<tbody>
 		    <tr valign="top">
 			<td>
+			<!--<a href="https://arxiv.org/pdf/2005.03611.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			   <a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+			-->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“A Review of Cognitive Assistants for Healthcare: Trends, Prospects, and Future Directions” </font></b></b><br>
+			S. Preum, S. Munir, M. Ma, M. S. Yasar, D. J. Stone, R. Williams, <u>H. Alemzadeh</u>, J. Stankovic<br>
+			To appear in <i>ACM Computing Surveys</i>.<br>   	
+			</p>
+			</td>
+		    </tr>
+		    
+		    <tr valign="top">
+			<td>
 			<a href="https://arxiv.org/pdf/2005.03611.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
 			   <!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
 			   -->
@@ -39,8 +54,8 @@
 		    
 		    <tr valign="top">
 			<td>
-			   <!--<a href="./papers/ISMR2020.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			   <a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+			   <a href="http://arxiv.org/abs/2010.04785"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			   <!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
 				-->
 			</td>
 			<td>
