--- a/students.html
+++ b/students.html
@@ -62,10 +62,8 @@
 		<tr valign="top">
 		    <td></td>
 			<td><ul> 
-			<li>Harshneet Bhatia</li> 
+			<li>Sion Kim</li>
 			<li>Asha Maran</li>
-			<li>Elizabeth Shelton</li>
-			<li>Erick Tian</li>
 			</ul>
 			</td>
 		</tr>
@@ -80,7 +78,7 @@
 			<td></td>
 			<td>
 			<ul>
-			<li>Mustafa Hotaki</li>
+			<li>Mustafa Hotaki -&ensp;First Position: Counterpoint Consulting&ensp;</li>
 			<li>Mohammad Samin Yasar</li>
 			<li>Bulbul Ahmed -&ensp;First Position: PhD @ UFlorida&ensp;</li>
 			<li>Yongming Qin</li>
@@ -98,6 +96,9 @@
 			<td></td>
 			<td>
 			<ul>
+			<li>Elizabeth Shelton</li>
+			<li>Harshneet Bhatia</li> 
+			<li>Erick Tian</li>
 			<li>Michael Tang</li>
 			<li>Gabriel Mallari</li> 
 			<li>Ailec Wu -&ensp;First Position: PhD @ Caltech&ensp;</li>
@@ -115,7 +116,7 @@
 		</table>		
 		</td>
 		
-		<td width="60%" align="left">
+		<!--<td width="60%" align="left">
 		<table border="0" cellspacing="0" cellpadding="5">
 		<tbody>
 		<tr valign="top">
@@ -140,7 +141,7 @@
 		</tr>
 		</tbody>
 		</table>
-		</td>
+		</td>-->
 		
 		</tr>
 		</tbody>
