--- a/students.html
+++ b/students.html
@@ -116,7 +116,7 @@
 		</table>		
 		</td>
 		
-		<!--<td width="60%" align="left">
+		<td width="58%" align="left">
 		<table border="0" cellspacing="0" cellpadding="5">
 		<tbody>
 		<tr valign="top">
@@ -141,7 +141,7 @@
 		</tr>
 		</tbody>
 		</table>
-		</td>-->
+		</td>
 		
 		</tr>
 		</tbody>
