--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ECE/CS 4434/6434 - Spring 2018</title>
+<title>ECE/CS 4434/6434 - Spring 2021</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <link rel="icon" type="image/ico" href="images/favico.ico">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
@@ -10,17 +10,22 @@
 <body>
 <div id="all" class="clearfix">
 	<p align="center" style="font-size:20px">
-	   <b><br>Dependable Computing Systems</b>
+	   <strong><b><br>Dependable Computing Systems</b></strong>
 	</p>
 	<p align="center" style="font-size:18px">
 	   <b>
 	   ECE/CS 4434/6434<br>
-	   Spring 2019 <br>
+	   Spring 2021 <br>
 	   </b>
 	</p>
 	<p align="center" style="font-size:20px" >
 	<img src="./incidents.png" alt="[PNG]" width="80%" height="80%" border="0" align="middle">
 	</p>	
+	<p align="left" style="font-size:15px;color:red">
+		Due to the current COVID-19 pandemic, all the course activities will be carried out online. 
+ 		<br>
+		For the latest updates, please visit <a style="font-size:15px;color:red" href="https://www.virginia.edu/coronavirus">UVA's Return to Grounds page</a>.
+	</p>
 	<p align="justify" style="font-size:14px">
 		Computing systems are used in various critical domains including aerospace, energy, transportation, healthcare, and commerce. 
 		Failures of these systems may lead to catastrophic consequences such as injury, loss of life, damage to equipment, or financial loss. 
@@ -44,10 +49,10 @@
 		</ul>
 		<br>
 	</p>
-	<p><strong>Time: </strong>Tue/Thu 5:00-6:15pm<br>
-	<strong>Location: </strong>Thornton Hall E304<br>
-	<strong>Instructor Office Hours: </strong>TBD or by appointment - Olsson Hall 259<br>
-	<strong>TA Office Hours: </strong>TBD<br>	
+	<p><strong>Time: </strong>Tue/Thu 11:00am - 12:15pm<br> 
+	<strong>Location: </strong>Online via Zoom<br><br>
+	<strong>Virtual Instructor Office Hours: </strong>TBD or by appointment - via Zoom<br>
+	<strong>Virtual TA Office Hours: </strong>TBD<br>	
 	<strong><a href="https://collab.its.virginia.edu/portal/site/24e9f26f-6f30-4d4b-b104-53d3ab47044a" target="_blank">UVA Collab Site</a></strong> (For lecture notes, homework submission, grading)<br>
 	<strong><a href="https://piazza.com/virginia/spring2018/ececs43326434sys45826582/home" target="_blank">Piazza</a></strong> (For questions, discussions, and polls)</p>	
 
