--- a/teaching/ece_6501/schedule.html
+++ b/teaching/ece_6501/schedule.html
@@ -26,7 +26,7 @@
     <p align="left" style="font-size:16px">
     The following schedule lists the tentative activities for each week and throughout the semester. 
     This schedule is <b><u>subject to change</b></u>. You will be informed of any updates or changes here and on the Collab website and at the beginning of each class. <br></p>
-    <p align="right" style="font-size:14px"><b>(Reading: &ensp; V = Valvano, L&S = Lee and Seshia, K = Koopman, Kn = Knight)</b><br></p>
+    <p align="right" style="font-size:14px"><b>(Reading: &ensp; V = Valvano, L&S = Lee and Seshia, PK = Koopman, KN = Knight)</b><br></p>
     <p>
     <!--<iframe width = "100%" height = 950px src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQKUib6uM22bMlxMOJCoFwjuyzJKbwW6L3tfMcw8za-E1Gn3jRMl8Qwx395W3nF8sUnq7LaUbVMR_xG/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>-->
     <iframe width = "100%" height = 950px src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS0FVTuZYwvUiBWYUci25OXsxYwub08cvr3xTdRmk4_qdo0SVGw6U4Y_u3OGiVel6py2yadk7c0YRoA/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
