--- a/news.html
+++ b/news.html
@@ -22,6 +22,16 @@
 		<font size="2.5">
 		<table border="0" cellpadding="5" cellspacing="0" class="smallfix">
 		<tbody>									
+			
+			<tr valign="top"><td colspan="2"></td></tr>
+			<tr valign="top">
+			<td>01/2021</td>
+			<td width="5"></td>
+			<td>
+			I am co-organizing the <a href="https://dependability.org/wg10.4/ivds2021/index.html">First IFIP workshop on Intelligent Vehicle Dependability and Security (IVDS)</a> in conjunction with the Winter Meeting of the IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance. 
+			</td>	
+			</tr>
+			
 			<tr valign="top"><td colspan="2"></td></tr>
 			<tr valign="top">
 			<td>07/2020</td>
