--- a/news.html
+++ b/news.html
@@ -28,7 +28,7 @@
 			<td>01/2021</td>
 			<td width="5"></td>
 			<td>
-			I am co-organizing the <a href="https://dependability.org/wg10.4/ivds2021/index.html">First IFIP workshop on Intelligent Vehicle Dependability and Security (IVDS)</a> in conjunction with the Winter Meeting of the IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance. 
+			I am co-organizing the <a href=" https://www.dependability.org/wg10.4/ivds2021/">First IFIP workshop on Intelligent Vehicle Dependability and Security (IVDS)</a> in conjunction with the Winter Meeting of the IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance. 
 			</td>	
 			</tr>
 			
