Update 6434 and 6501 projects

--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -51,8 +51,8 @@
 	</p>
 	<p><strong>Time: </strong>Tue/Thu 11:00am - 12:15pm<br> 
 	<strong>Location: </strong>Online via Zoom<br><br>
-	<strong>Virtual Instructor Office Hours: </strong>TBD or by appointment - via Zoom<br>
-	<strong>Virtual TA Office Hours: </strong>TBD<br>	
+	<strong>Virtual Instructor Office Hours: </strong>Tuesdays 2pm or by appointment - via Zoom<br>
+	<strong>Virtual TA Office Hours: </strong>Wednesdays 3pm - via Zoom<br>	
 	<strong><a href="https://collab.its.virginia.edu/portal/site/1b7818db-9f3c-4d78-ba05-d2847f0a107f" target="_blank">UVA Collab Site</a></strong> (For lecture notes, homework submission, grading)<br>
 	<strong><a href="https://piazza.com/virginia/spring2021/ececs44346434" target="_blank">Piazza</a></strong> (For questions, discussions, and polls)</p>	
 
@@ -79,9 +79,9 @@
 	<p><br>
 	<strong>References:</strong><br>
 		<ul>
-		<li>I. Koren and C. Mani Krishna, <em>Fault-tolerant Systems</em>, 1<sup>st</sup> edition, 2007, Morgan Kaufmann (Available <a href="http://proquest.safaribooksonline.com/9780120885251" target="_blank">here</a> through UVA Library).</li>
-		<li>J. Knight, <em>Fundamentals of Dependable Computing for Software Engineers</em>, 2012, CRC Press (Available <a href="http://proquest.safaribooksonline.com/9781439862551" target="_blank">here</a> through UVA Library).</li>
-		<li>K. Trivedi, <em>Probability and Statistics with Reliability, Queuing and Computer Science Applications</em>, 2<sup>nd</sup> edition, 2001, John Wiley &amp; Sons (Available <a href="http://proquest.safaribooksonline.com/book/statistics/9781119285427" target="_blank">here</a> through UVA Library).</li>
+		<li>I. Koren and C. Mani Krishna, <em>Fault-tolerant Systems</em>, 1<sup>st</sup> edition, 2007, Morgan Kaufmann (Available <a href="https://search.lib.virginia.edu/catalog/u5587897" target="_blank">here</a> through UVA Library).</li>
+		<li>J. Knight, <em>Fundamentals of Dependable Computing for Software Engineers</em>, 2012, CRC Press (Available <a href="https://search.lib.virginia.edu/sources/uva_library/items/u6505714" target="_blank">here</a> through UVA Library).</li>
+		<li>K. Trivedi, <em>Probability and Statistics with Reliability, Queuing and Computer Science Applications</em>, 2<sup>nd</sup> edition, 2001, John Wiley &amp; Sons (Available <a href="https://search.lib.virginia.edu/sources/uva_library/items/u7298615" target="_blank">here</a> through UVA Library).</li>
 		<li>D. K. Pradhan, <em>Fault Tolerant Computer System Design</em>, 1<sup>st</sup> edition, 1996, Prentice-Hall.</li>
 		<li>B. W. Johnson, <em>Design and Analysis of Fault Tolerant Digital Systems</em>, 1988, Addison-Wesley Longman Publishing Co.</li>
 		</ul>
