--- a/teaching/ece_6501/projects.html
+++ b/teaching/ece_6501/projects.html
@@ -17,7 +17,7 @@
 	    <li><a style="color:#232C2D; background:#FFFFFF" href="projects.html">Projects</a></li>
 	</ul>
 	<div id="content">
-	<table width = "100%">
+	<table width = "100%" cellpadding="0" cellspacing="0">
 	<tr>
 	<td>
 	<p align="left" style="font-size:22px">
@@ -40,8 +40,29 @@
     We will use <a href="https://github.com/UVA-embedded-systems" target="_blank">GitHub Classroom</a> for posting the skeleton code for mini projects and your submissions.  
     <br><br>
     </p>
-    <p>
+	</td>
+	</tr>
+	<tr>
+	<td>
+    <p align="left">
+    <a id="2020_projects" style="font-size:16px"><b>Top Final Projects - Fall 2020</b></a>:
+    </p>
+	<table border="0" cellpadding="0" cellspacing="20" align="left">
+		<tbody>
+		<tr>
+		<td><iframe width="100%" height="auto%" src="https://www.youtube.com/embed/TUwJ-5sQj-w" frameborder="0" allowfullscreen></iframe></td>
+		<td><iframe width="100%" height="auto%" src="https://www.youtube.com/embed/P5wlOLLm4XM" frameborder="0" allowfullscreen></iframe></td>
+		<td><iframe width="100%" height="auto%" src="https://drive.google.com/file/d/1CEEdhlqtF-DVinxwljyuGJF_1ojMDZbX/preview" frameborder="0" allowfullscreen></iframe></td>
+		</tr>
+		</tbody>
+	</table>
+    </tr>
+	</td>
+	<tr>
+	<td>
+    <p align="left">   
     <a id="2018_projects" style="font-size:16px"><b>Top Final Projects - Fall 2018</b></a>:
+    </p>
 	<table border="0" cellpadding="0" cellspacing="20" align="left">
 		<tbody>
 		<tr>
@@ -55,11 +76,13 @@
 		</tr>
 		</tbody>
 	</table>
-	<!--<img src="./class_2018.JPG" alt="[JPG]" width="60%" height="auto%" border="0" align="middle">-->
-	</p>
-	<p>
-	<br><br>
+    </tr>
+	</td>
+	<tr>
+	<td>
+	<p align="left">
     <a id="2017_projects" style="font-size:16px"><b>Example Projects from Fall 2017</b></a>:
+	</p>
 	<table border="0" cellpadding="0" cellspacing="20" align="left">
 		<tbody>
 		<tr>
@@ -72,7 +95,6 @@
 		</tr>
 		</tbody>
 	</table>
-	</p>
 	</td>
 	</tr>
 	</table>
